syntax = "proto3";

package merlin.transformer;

import "transformer/spec/common.proto";

option go_package = "github.com/gojek/merlin/pkg/transformer/spec";


message Table {
  string name = 1;
  BaseTable baseTable = 2;
  repeated Column columns = 3;
}

message BaseTable {
  oneof baseTable {
    FromJson fromJson = 1;
    FromTable fromTable = 2;
  }
}

message Column {
  string name = 1;
  oneof columnValue {
    FromJson fromJson = 2;
    string expression = 3;
  }
}

message TableTransformation {
  string inputTable = 1;
  string outputTable = 2;
  repeated TransformationStep steps = 3;
}

message TransformationStep {
  repeated string dropColumns = 1;
  repeated string selectColumns = 2;
  repeated SortColumnRule sort = 3;
  map<string, string> renameColumns = 4;
  repeated UpdateColumn updateColumns = 5;
}

message SortColumnRule {
  string column = 1;
  SortOrder order = 2;
}

enum SortOrder {
  ASC = 0;
  DESC = 1;
}

message UpdateColumn {
  string column = 1;
  string expression = 2;
}

message TableJoin {
  string leftTable = 1;
  string rightTable = 2;
  string outputTable = 3;
  JoinMethod how = 4;
  string onColumn = 5;
  repeated string onColumns = 6;
}

enum JoinMethod {
  INVALID_JOIN = 0;
  LEFT = 1;
  RIGHT = 2;
  INNER = 3;
  OUTER = 4;
  CROSS = 5;
  CONCAT = 6;
}
